--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -49,7 +49,7 @@ import LoginForm from '../components/loginForm.astro';
 				</div>
 	
 				<div class="w-full">
-					<h1 class="font-sans font-bold text-4xl tracking-wide text-slate-800">Iniciar sesión</h1>
+					<h1 class="font-sans font-bold text-4xl tracking-wide text-slate-800">homw</h1>
 					<LoginForm>
 				</div>
 	
