--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,72 +3,58 @@ import Layout from '../layouts/Layout.astro';
 import { Image } from 'astro:assets';
 import logoLucmar from '../../public/assets/img/logolucmar.jpg';
 import LoginForm from '../components/loginForm.astro';
+import LoadingScreenTwo from '../components/LoadingScreenTwo.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		  <!-- Loading screen -->
-		  <div id="loading-screen" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-white bg-opacity-100 z-50 ">
-			<svg class="h-[100px] w-auto" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-				<circle cx="12" cy="2" r="0" fill="currentColor">
-					<animate attributeName="r" begin="0" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(45 12 12)">
-					<animate attributeName="r" begin="0.125s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(90 12 12)">
-					<animate attributeName="r" begin="0.25s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(135 12 12)">
-					<animate attributeName="r" begin="0.375s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(180 12 12)">
-					<animate attributeName="r" begin="0.5s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(225 12 12)">
-					<animate attributeName="r" begin="0.625s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(270 12 12)">
-					<animate attributeName="r" begin="0.75s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-				<circle cx="12" cy="2" r="0" fill="currentColor" transform="rotate(315 12 12)">
-					<animate attributeName="r" begin="0.875s" calcMode="spline" dur="1s" keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8" repeatCount="indefinite" values="0;2;0;0" />
-				</circle>
-			</svg>
-		</div>
-		<section class="h-screen overflow-y-hidden w-full bg-slate-50 flex flex-row justify-center items-start pt-20">
-			<div class="flex flex-col items-center justify-start h-full w-96 px-8">
-				<div class="w-full px-5 flex flex-row items-center justify-evenly gap-0 mb-10">
-					<div class="h-auto w-[70px]">
-						<Image class="w-full rounded-xl" src={logoLucmar} alt="" />
-					</div>
-					<div class="flex flex-col items-start justify-center w-fit h-full">
-						<span class="font-bold font-sans text-xl tracking-wide text-slate-800">Lucmar Cloud</span>
-						<span class="font-sans font-extralight text-base text-slate-800">Panel de administración</span>
-					</div>
-				</div>
-	
-				<div class="w-full">
-					<h1 class="font-sans font-bold text-4xl tracking-wide text-slate-800">Iniciar sesión</h1>
-					<LoginForm>
-				</div>
-	
-				<div class="login__footer text-neutral-700"></div>
-			</div>
-			<div class="login__background h-screen"></div>
-		</section>
-	</main>
+<script>
+  import axios from 'axios';
+  function showLoadingScreenTwo() {
+    const loadingScreen = document.getElementById('loading-screen-two');
+    loadingScreen.classList.remove('hidden');
+  }
+  function hideLoadingScreenTwo() {
+    const loadingScreen = document.getElementById('loading-screen-two');
+    loadingScreen.classList.add('hidden');
+  }
+  showLoadingScreenTwo();
+  axios
+    .get('http://localhost:8000/backend/auth/check_login_status.php', {
+      withCredentials: true,
+    })
+    .then(function (response) {
+      if (response.data.loggedIn) {
+        window.location.href = '/home';
+      } else {
+        hideLoadingScreenTwo();
+      }
+    })
+    .catch(function (error) {
+      console.error('Error checking login status:', error);
+    });
+</script>
+<Layout title="Iniciar sesión">
+  <LoadingScreenTwo />
+  <main>
+    <section class="h-screen overflow-y-hidden w-full bg-slate-50 flex flex-row justify-center items-start pt-20">
+      <div class="flex flex-col items-center justify-start h-full w-96 px-8">
+        <div class="w-full px-5 flex flex-row items-center justify-evenly gap-0 mb-10">
+          <div class="h-auto w-[70px]">
+            <Image class="w-full rounded-xl" src={logoLucmar} alt="" />
+          </div>
+          <div class="flex flex-col items-start justify-center w-fit h-full">
+            <span class="font-bold font-sans text-xl tracking-wide text-slate-800">Lucmar Cloud</span>
+            <span class="font-sans font-extralight text-base text-slate-800">Panel de administración</span>
+          </div>
+        </div>
 
-	<script>
-		function hideLoadingScreen() {
-				const loadingScreen = document.getElementById('loading-screen');
-				loadingScreen.classList.add('hidden');
-			}
-	
-			// Call hideLoadingScreen function when content is fully loaded
-			window.addEventListener('load', function() {
-				hideLoadingScreen();
-			});
-	</script>
+        <div class="w-full">
+          <h1 class="font-sans font-bold text-4xl tracking-wide text-slate-800">Iniciar sesión</h1>
+          <LoginForm />
+
+          <div class="login__footer text-neutral-700"></div>
+        </div>
+        <div class="login__background h-screen"></div>
+      </div>
+    </section>
+  </main>
 </Layout>
-
