Aplicación mapas creada

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ import LoadingScreen from '../components/LoadingScreen.astro';
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link href="https://api.tomtom.com/maps-sdk-web-js/5.x/5.68.1/maps/maps.css" rel="stylesheet" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script>
