--- a/src/components/buscador/TablaBuscador.astro
+++ b/src/components/buscador/TablaBuscador.astro
@@ -3,7 +3,7 @@ import MoreInfo from './MoreInfo.astro';
 ---
 
 <div class="h-auto w-full flex flex-col justify-center items-center pt-8 mb-12 pb-8">
-  <div class="bg-slate-50 flex flex-col justify-start items-center h-auto py-5 lg:py-10 px-3 lg:px-12 gap-4 rounded-2xl shadow-2xl w-[90%] relative">
+  <div class="bg-slate-50 flex flex-col justify-start items-center h-auto py-5 lg:py-10 px-0 lg:px-12 gap-4 rounded-2xl shadow-2xl w-[90%] relative">
     <h1 class="font-sans text-xl font-bold text-slate-900">El buscador de inmuebles</h1>
     <form id="search-form" class="mb-4 flex flex-row justify-center gap-5 items-center flex-wrap w-full px-4">
       <label class="text-slate-900 text-base font-semibold" for="direccion">Introduce la dirección:</label>
@@ -14,12 +14,13 @@ import MoreInfo from './MoreInfo.astro';
     <table class="text-center w-full table-fixed">
       <thead>
         <tr class="bg-slate-500 text-white">
-          <th class="inherit overflow-hidden w-[60%]">Direccion</th>
+          <th class="inherit overflow-hidden w-[46%]">Direccion</th>
+          <th class="inherit overflow-hidden w-[22%]">Zona</th>
           <th class="hidden xl:table-cell overflow-hidden">Tipo</th>
           <th class="hidden xl:table-cell overflow-hidden">Uso</th>
           <th class="hidden xl:table-cell overflow-hidden">Superficie</th>
           <th class="hidden xl:table-cell overflow-hidden">Año</th>
-          <th class="inherit overflow-hidden w-[30%] h-[100%]"></th>
+          <th class="inherit overflow-hidden w-[22%] h-[100%]"></th>
           <th class="inherit overflow-hidden"></th>
         </tr>
       </thead>
