--- a/src/components/mobilemenubar.astro
+++ b/src/components/mobilemenubar.astro
@@ -16,6 +16,20 @@
           <path fill="currentColor" fill-rule="evenodd" d="M2 6a4 4 0 1 1 8 0a4 4 0 0 1-8 0m4-6a6 6 0 1 0 3.476 10.89l2.817 2.817a1 1 0 0 0 1.414-1.414l-2.816-2.816A6 6 0 0 0 6 0" cap-rule="evenodd"></path>
         </svg>
       </a>
+      <a href="/mapa" id="mobile-itemMapa" class="h-[45px] bg-white p-2 px-3.5 rounded-3xl shadow-lg flex items-center justify-center hover:cursor-pointer hover:bg-blue-400 hover:text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1.9em" height="1.9em" viewBox="0 0 100 100">
+          <path
+            fill="currentColor"
+            d="m70.387 70l-3.854 7.247l18.87-3.085c-3.808-1.91-8.963-3.275-15.016-4.162m-48.61 1.58C13.037 73.885 7.5 77.662 7.5 83.272a8.4 8.4 0 0 0 .774 3.497l30.285-4.95zM91.79 80l-42.15 6.87l11.116 12.646C79.01 97.881 92.5 92.05 92.5 83.272c0-1.17-.252-2.257-.71-3.271m-49.272 8.055l-28.48 4.655C21.566 97.374 34.853 100 50 100c.918 0 1.815-.026 2.719-.045z"
+          >
+          </path><path
+            fill="currentColor"
+            d="M50.002 0c-16.3 0-29.674 13.333-29.674 29.596c0 6.252 1.987 12.076 5.342 16.865l19.234 33.25l.082.107c.759.991 1.5 1.773 2.37 2.348c.87.576 1.95.92 3.01.814c2.118-.212 3.415-1.708 4.646-3.376l.066-.086l21.234-36.141l.012-.023c.498-.9.866-1.816 1.178-2.708a29.246 29.246 0 0 0 2.17-11.05C79.672 13.333 66.302 0 50.002 0m0 17.045c7.071 0 12.59 5.509 12.59 12.55c0 7.043-5.519 12.55-12.59 12.55c-7.072 0-12.594-5.508-12.594-12.55c0-7.04 5.523-12.55 12.594-12.55"
+            color="currentColor"
+          >
+          </path>
+        </svg>
+      </a>
 
       <div id="moreMobileMenu" class="h-auto pt-3.5 px-3.5 rounded-3xl flex flex-col items-center justify-center">
         <ul class="w-auto h-full flex flex-col justify-between gap-6">
@@ -121,6 +135,8 @@
         localStorage.setItem('currentPage', 'Encargos');
       } else if (currentURL.includes('noticias')) {
         localStorage.setItem('currentPage', 'Noticias');
+      } else if (currentURL.includes('mapa')) {
+        localStorage.setItem('currentPage', 'Mapa');
       }
     }
 
