--- a/src/layouts/LayoutMenu.astro
+++ b/src/layouts/LayoutMenu.astro
@@ -18,7 +18,7 @@ import LoadingScreen from '../components/LoadingScreen.astro';
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <script>
+    <!-- <script>
       import axios from 'axios';
 
       axios
@@ -34,7 +34,7 @@ import LoadingScreen from '../components/LoadingScreen.astro';
         .catch(function (error) {
           console.error('Error checking login status:', error);
         });
-    </script>
+    </script> -->
   </head>
 
   <body class="overflow-x-hidden overflow-y-auto bg-slate-200">
