--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -1,18 +1,19 @@
 ---
-
+import CalendarApp from '../calendar/Calendar.jsx';
 ---
 
-<div class="h-svh w-[100%] flex flex-col justify-center items-center overflow-hidden overflow-x-hidden bg-gradient-to-t from-slate-400 via-slate-300 to-slate-200 relative">
+<div class="h-auto w-[100%] flex flex-col justify-center items-center pt-40 overflow-hidden overflow-x-hidden bg-gradient-to-t from-slate-400 via-slate-300 to-slate-200 relative">
   <div id="clock" class="text-lg font-sans font-medium text-zinc-800 absolute top-10 z-10"></div>
 
   <div id="nombre-header" class="flex flex-col items-center justify-center w-full h-[60px] pb-10">
     <p class="font-sans text-xl font-medium text-zinc-800 fade-in">Hola,</p>
     <p class="font-sans text-xl font-medium text-zinc-800 fade-in" id="nombreusuario-texto"></p>
   </div>
-  <div id="home-title" class="flex flex-col items-center justify-center w-full h-auto pb-40">
+  <div id="home-title" class="flex flex-col items-center justify-center w-full h-auto pb-16">
     <p class="text-4xl font-bold text-center animate-fade-in-up">Bienvenido a</p>
     <h1 class="animate-fade-in-up-delayed text-5xl font-sans font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-sky-800 via-sky-600 to-sky-300 inline-block">Lucmar Cloud</h1>
   </div>
+  <CalendarApp client:only="react" />
 </div>
 
 <style>
