cambios en app de ios

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import LoadingScreen from '../components/LoadingScreen.astro';
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link href="https://api.tomtom.com/maps-sdk-web-js/5.x/5.68.1/maps/maps.css" rel="stylesheet" />
@@ -87,3 +87,11 @@ import LoadingScreen from '../components/LoadingScreen.astro';
     <slot />
   </body>
 </html>
+
+<style>
+  body {
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+    @apply bg-slate-50;
+  }
+</style>
