--- a/src/layouts/LayoutMenu.astro
+++ b/src/layouts/LayoutMenu.astro
@@ -16,6 +16,8 @@ import LoadingScreen from '../components/LoadingScreen.astro';
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script>
