--- a/src/components/buscador/filterStyles.css
+++ b/src/components/buscador/filterStyles.css
@@ -1,4 +1,4 @@
-@keyframes fadeIn {
+@keyframes fadeInLeft {
     from {
       opacity: 0;
       transform: translateX(-200px);
@@ -27,7 +27,6 @@
       transform: translateY(200px);
     }
     to {
-        display: block;
       opacity: 1;
       transform: translateY(0);
     }
@@ -46,17 +45,20 @@
     }
   }
 
-  .iconscontainertrue {
-    animation: fadeIn 1s ease forwards;
+  .orderbyanimation {
+    opacity: 0;
+    animation: fadeInUp 0.6s ease forwards;
+    animation-delay: 50ms;
   }
   
-  
   .leftanimation1 {
-    animation: fadeIn 0.6s ease forwards;
+    animation: fadeInLeft 0.6s ease forwards;
+    animation-delay: 0.1s;
   }
 
   .rightanimation1 {
     animation: fadeInRight 0.6s ease forwards;
+    animation-delay: 0.1s;
   }
   
   .leftanimation2 {
