"Add Netlify build settings to use --legacy-peer-deps"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import { Image } from 'astro:assets';
 import logoLucmar from '../../public/assets/img/logolucmar.jpg';
-import LoginForm from '../components/loginForm.astro';
+import LoginForm from '../components/loginform/loginForm.astro';
 import LoadingScreenTwo from '../components/LoadingScreenTwo.astro';
 import '@capacitor-community/safe-area';
 ---
